List tags in :keywords:

--- a/deadlock-empire.adoc
+++ b/deadlock-empire.adoc
@@ -1,10 +1,6 @@
 = The deadlock empire
 
-tags::
-* concurrency
-* parallelism
-* distributed systems
-* tla+
+:keywords: concurrency, parallelism, distributed systems, tla+
 
 https://deadlockempire.github.io/[The deadlock empire] is a game about
 concurrency. I want to play it with TLA+ to practice and to see if its levels
