--- a/psef-and-nef-sheaves.adoc
+++ b/psef-and-nef-sheaves.adoc
@@ -1,6 +1,6 @@
 = Pseudo-effective and numerically flat reflexive sheaves
 
-:keywords: math, kahler manifold, complex geometry, pseudo-effective, numerically effective, chern classes
+:keywords: math, kahler manifold, complex geometry, pseudo-effective, numerically effective, chern classes, research
 
 One of my math siblings has a https://arxiv.org/abs/2004.14676[paper] out where
 they prove that pseudo-effective bundles over compact Kahler manifolds with zero
